--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -2,6 +2,9 @@ image:
   name: atlassian/default-image:4
 
 definitions:
+  services:
+    docker:
+      memory: 7128
   steps:
     - step: &build
         name: Build & Test
