chore: (ROOFIO-52) Adjust bitbucket pipeline
Increase Docker service memory

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,6 +9,7 @@ definitions:
     - step: &build
         name: Build & Test
         oidc: true
+        size: 2x
         caches:
           - docker
         services:
