--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -19,6 +19,7 @@ definitions:
     - step: &push
         name: Push to ECR
         oidc: true
+        size: 2x
         image:
         script:
           - export AWS_DEFAULT_REGION=$AWS_REGION
@@ -30,6 +31,7 @@ definitions:
     - step: &deploy-dev
         name: Deploy to ECS DEV
         oidc: true
+        size: 2x
         script:
           - pipe: atlassian/aws-ecs-deploy:1.12.1
             variables:
@@ -41,6 +43,7 @@ definitions:
     - step: &deploy-stage
         name: Deploy to ECS STAGE
         oidc: true
+        size: 2x
         script:
           - pipe: atlassian/aws-ecs-deploy:1.12.1
             variables:
@@ -52,6 +55,7 @@ definitions:
     - step: &deploy-prod
         name: Deploy to ECS PROD
         oidc: true
+        size: 2x
         script:
           - pipe: atlassian/aws-ecs-deploy:1.12.1
             variables:
