--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@dagrejs/dagre": "^1.1.2",
     "@docusaurus/core": "^3.1.0",
     "@docusaurus/preset-classic": "^3.1.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@envelop/on-resolve": "^4.1.0",
     "@floating-ui/react": "^0.24.3",
     "@google-cloud/local-auth": "2.1.0",
@@ -26,6 +26,8 @@
     "@linaria/core": "^6.2.0",
     "@linaria/react": "^6.2.1",
     "@mdx-js/react": "^3.0.0",
+    "@mui/material": "^6.1.1",
+    "@mui/x-data-grid": "^7.18.0",
     "@nestjs/apollo": "^11.0.5",
     "@nestjs/axios": "^3.0.1",
     "@nestjs/cli": "^9.0.0",
